--- a/style.css
+++ b/style.css
@@ -1,18 +1,91 @@
 
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #2C3E50;
+}
+
+#extra-bg {
+    min-height: 90%;
+    max-width: 90%;
+    background-color: #16A085;
+}
+
+.content {
+    width: 100%;
+    height: 80%;
+    background-color: #8BC34A;
+}
+
 #preview {
-    max-height: 500px;
-    max-width: 400px;
-    border: 2px solid black;
+    height: 530px;
+    width: 400px;
+    background-color: white;
+    box-shadow: 6px 6px 0 gray;
     float: right;
-    margin: 50px 50px 0 0;
+    margin: 30px 40px;
 }
 
 #preview img {
-    max-width: 400px;
-    max-height: 400px;
+    width: 386px;
+    height: 300px;
+    background-color: #D9DCE0;
+    margin: 10px 7px;
+}
+
+#user-description {
+    width: 386px;
+    height: 150px;
+    padding: 5px 5px;
+    background-color: #D9DCE0;
+    margin: 0 7px;
+    overflow-wrap: break-word;
+}
+
+#preview-url {
+    width: 386px;
+    height: 40px;
+    padding: auto 5px;
+    background-color: #D9DCE0;
+    margin: 10px 7px;
 }
 
 .description {
     width: 400px;
     height: 150px;
+}
+
+/* This is here because when you add a margin to the media-input-box
+it lowers the entire background of the .content div behind the media-input-box
+and so the background is no longer stationed in the top left corner */
+#social-media-post {
+    padding: 70px 0 0 30px;
+}
+
+.media-input-box {
+    height: 350px;
+    width: 500px;
+    background-color: #4267B2;
+    border: 2px white solid;
+}
+
+#description-box {
+    position: relative;
+    border: 1px solid red;
+}
+
+#description-box p {
+    position: absolute;
+    top: 15px;
+    left: 30px;
+    padding: 0 5px;
+    color: white;
+}
+
+.description {
+    margin: 35px 0 20px 20px;
+    box-shadow: 0 0 0 8px #07275b;
+    border-radius: 7px;
 }
